--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "@turf/union": "^6.5.0",
     "@types/d3-color": "^3.1.3",
     "@types/d3-interpolate": "^3.0.4",
+    "@types/d3-scale": "^4.0.8",
     "@types/file-saver": "^2.0.7",
     "@types/geojson": "^7946.0.14",
     "@types/node": "^20.14.11",
@@ -137,6 +138,7 @@
     "cpr": "^3.0.1",
     "d3-color": "^3.1.0",
     "d3-interpolate": "^3.0.1",
+    "d3-scale": "^4.0.2",
     "dependency-cruiser": "^15.5.0",
     "dnd-core": "^16.0.1",
     "emoji-regex": "^10.3.0",
@@ -189,6 +191,7 @@
     "react-router-dom": "^6.25.1",
     "react-transition-group": "^4.4.5",
     "react-virtuoso": "^4.9.0",
+    "recharts": "^2.12.7",
     "rollup-plugin-visualizer": "^5.12.0",
     "sinon": "^18.0.0",
     "stylelint": "^16.2.1",
