--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "@types/d3-color": "^3.1.3",
     "@types/d3-interpolate": "^3.0.4",
     "@types/d3-scale": "^4.0.8",
+    "@types/dot-object": "^2.1.6",
     "@types/file-saver": "^2.0.7",
     "@types/geojson": "^7946.0.14",
     "@types/node": "^20.14.11",
@@ -136,12 +137,12 @@
     "bundle-size-diff": "github:konturio/bundle-size-diff#v1.0.7",
     "clsx": "^1.2.1",
     "cpr": "^3.0.1",
-    "csvtojson": "^2.0.10",
     "d3-color": "^3.1.0",
     "d3-interpolate": "^3.0.1",
     "d3-scale": "^4.0.2",
     "dependency-cruiser": "^15.5.0",
     "dnd-core": "^16.0.1",
+    "dot-object": "^2.1.5",
     "emoji-regex": "^10.3.0",
     "eslint": "^8.57.0",
     "eslint-import-resolver-typescript": "^3.6.1",
