--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "@types/d3-color": "^3.1.3",
     "@types/d3-interpolate": "^3.0.4",
     "@types/d3-scale": "^4.0.8",
+    "@types/dot-object": "^2.1.6",
     "@types/file-saver": "^2.0.7",
     "@types/geojson": "^7946.0.14",
     "@types/node": "^20.14.11",
@@ -141,6 +142,7 @@
     "d3-scale": "^4.0.2",
     "dependency-cruiser": "^15.5.0",
     "dnd-core": "^16.0.1",
+    "dot-object": "^2.1.5",
     "emoji-regex": "^10.3.0",
     "eslint": "^8.57.0",
     "eslint-import-resolver-typescript": "^3.6.1",
