--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "scripts": {
     "dev": "pnpm run i18n:import && vite",
-    "cosmos": "pnpm run i18n:import && run-p auto:cosmos:renderer auto:cosmos auto:open",
-    "cosmos:build": "run-s i18n:import auto:cosmos:export auto:cosmos:renderer:export",
+    "cosmos": "pnpm run i18n:import && cosmos",
+    "cosmos:build": "run-s i18n:import auto:cosmos:export",
     "build": "pnpm run i18n:import && vite build",
     "serve": "vite preview",
     "typecheck": "tsc --noEmit",
@@ -32,11 +32,7 @@
     "docker:build": "docker build -f ./Dockerfile ./ -t ghcr.io/konturio/disaster-ninja-fe:latest",
     "docker:run": "docker run --rm -d -p 80:80/tcp ghcr.io/konturio/disaster-ninja-fe:latest",
     "prepare": "node ./scripts/husky-prepare.js",
-    "auto:open": "open-cli http://localhost:5000",
-    "auto:cosmos": "cosmos --config cosmos.config.json",
-    "auto:cosmos:export": "patch-package && cosmos-export --config cosmos.config.export.json",
-    "auto:cosmos:renderer": "vite --config cosmos.vite.config.ts --force serve --port=8080",
-    "auto:cosmos:renderer:export": "vite build --config cosmos.vite.config.ts",
+    "auto:cosmos:export": "patch-package && cosmos-export --config cosmos.config.json",
     "release": "node ./scripts/auto-release/index.mjs",
     "link:packages": "node ./scripts/auto-link/index.mjs",
     "i18n:export": "tsx ./scripts/i18n/convertion.ts --to-gettext",
@@ -126,10 +122,8 @@
     "@types/react-transition-group": "^4.4.10",
     "@types/sinon": "^17.0.3",
     "@types/w3c-generic-sensor": "^1.0.9",
-    "@typescript-eslint/eslint-plugin": "^8.0.1",
-    "@typescript-eslint/parser": "^8.0.1",
-    "@uiw/react-github-corners": "1.5.16",
-    "@vitejs/plugin-react": "^4.3.1",
+    "@typescript-eslint/eslint-plugin": "^8.1.0",
+    "@typescript-eslint/parser": "^8.1.0",
     "@vitest/coverage-v8": "^2.0.5",
     "ajv": "^8.17.1",
     "autoprefixer": "^10.4.20",
@@ -139,7 +133,7 @@
     "d3-color": "^3.1.0",
     "d3-interpolate": "^3.0.1",
     "d3-scale": "^4.0.2",
-    "dependency-cruiser": "^15.5.0",
+    "dependency-cruiser": "^16.3.10",
     "dnd-core": "^16.0.1",
     "emoji-regex": "^10.3.0",
     "eslint": "^8.57.0",
@@ -156,16 +150,14 @@
     "hash-wasm": "^4.11.0",
     "history": "^5.3.0",
     "hsluv": "^1.0.1",
-    "i18next": "^22.5.1",
-    "i18next-browser-languagedetector": "^7.2.0",
-    "i18next-conv": "14.0.0",
+    "i18next": "^23.13.0",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-conv": "15.0.0",
     "i18next-scanner": "^4.5.0",
     "jwt-decode": "^4.0.0",
-    "lint-staged": "^15.2.8",
+    "lint-staged": "^15.2.9",
     "maplibre-gl": "^3.6.2",
     "markdown-to-jsx": "^7.4.7",
-    "mdast": "^3.0.0",
-    "mdast-util-from-markdown": "^2.0.1",
     "minimist": "^1.2.8",
     "nanoid": "^5.0.7",
     "nanoid-dictionary": "^4.3.0",
@@ -175,38 +167,36 @@
     "postcss-custom-media": "^8.0.2",
     "postcss-nested": "^6.2.0",
     "postcss-normalize": "^10.0.1",
-    "prettier": "^3.2.5",
+    "prettier": "^3.3.3",
     "react": "^18.2.0",
     "react-component-keepalive-ts": "^1.0.8",
-    "react-cosmos": "5.7.2",
+    "react-cosmos": "6.1.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-gtm-module": "^2.0.11",
-    "react-i18next": "^12.3.1",
+    "react-i18next": "^15.0.1",
     "react-lazily": "^0.9.2",
-    "react-markdown": "^8.0.7",
     "react-promise-suspense": "^0.3.4",
     "react-router": "^6.25.1",
     "react-router-dom": "^6.25.1",
     "react-transition-group": "^4.4.5",
-    "react-virtuoso": "^4.9.0",
+    "react-virtuoso": "^4.10.1",
     "recharts": "^2.12.7",
     "rollup-plugin-visualizer": "^5.12.0",
     "sinon": "^18.0.0",
-    "stylelint": "^16.2.1",
+    "stylelint": "^16.8.2",
     "stylelint-config-recommended": "^14.0.1",
-    "surge": "^0.23.1",
     "ts-json-schema-generator": "^2.3.0",
     "tsx": "^4.17.0",
-    "typescript": "5.5.3",
+    "typescript": "5.5.4",
     "typescript-plugin-css-modules": "^5.1.0",
     "uhtml": "^4.5.9",
     "utility-types": "^3.11.0",
     "vi-fetch": "^0.8.0",
-    "vite": "~5.4.0",
+    "vite": "~5.4.1",
     "vite-plugin-html": "^3.2.2",
-    "vite-plugin-mkcert": "^1.17.5",
+    "vite-plugin-mkcert": "^1.17.6",
     "vite-tsconfig-paths": "^5.0.1",
     "vitest": "^2.0.5",
     "wretch": "^2.9.0"
@@ -215,13 +205,19 @@
     "@faker-js/faker": "^8.4.1",
     "@playwright/test": "^1.42.1",
     "@types/gettext-parser": "^4.0.4",
+    "@vitejs/plugin-react-swc": "^3.7.0",
     "chalk": "^5.3.0",
     "dotenv": "^16.4.5",
     "husky": "^8.0.3",
     "open-cli": "^7.2.0",
     "playwright-slack-report": "^1.1.81",
     "prompts": "^2.4.2",
+    "react-cosmos-plugin-vite": "^6.1.1",
     "semver": "^7.6.3"
+  },
+  "optionalDependencies": {
+    "mdast-util-from-markdown": "^2.0.1",
+    "surge": "^0.23.1"
   },
   "pnpm": {
     "patchedDependencies": {
