--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
     "@nebula.gl/edit-modes": "1.1.0-alpha.5",
     "@nebula.gl/layers": "1.1.0-alpha.5",
     "@paypal/react-paypal-js": "^8.5.0",
-    "@reatom/async": "^3.15.3",
+    "@reatom/async": "3.15.2",
     "@reatom/core": "^3.9.0",
     "@reatom/core-v2": "^3.1.4",
     "@reatom/hooks": "^3.5.5",
