--- a/package.json
+++ b/package.json
@@ -98,8 +98,8 @@
     "@reatom/react-v2": "^3.1.2",
     "@sentry/react": "^8.18.0",
     "@slack/web-api": "^7.3.1",
-    "@testing-library/dom": "^10.3.2",
-    "@testing-library/react": "^16.0.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.0.1",
     "@turf/area": "6.5.0",
     "@turf/bbox": "^6.5.0",
     "@turf/centroid": "^6.5.0",
@@ -120,7 +120,7 @@
     "@types/react-dom": "^18.2.22",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
-    "@types/react-transition-group": "^4.4.10",
+    "@types/react-transition-group": "^4.4.11",
     "@types/sinon": "^17.0.3",
     "@types/w3c-generic-sensor": "^1.0.9",
     "@typescript-eslint/eslint-plugin": "^8.4.0",
@@ -196,7 +196,7 @@
     "uhtml": "^4.5.9",
     "utility-types": "^3.11.0",
     "vi-fetch": "^0.8.0",
-    "vite": "~5.4.3",
+    "vite": "5.4.2",
     "vite-plugin-html": "^3.2.2",
     "vite-plugin-mkcert": "^1.17.6",
     "vite-tsconfig-paths": "^5.0.1",
