--- a/package.json
+++ b/package.json
@@ -171,6 +171,7 @@
     "minimist": "^1.2.8",
     "nanoid": "^5.0.7",
     "nanoid-dictionary": "^4.3.0",
+    "nextafter": "^1.0.0",
     "npm-run-all": "^4.1.5",
     "papaparse": "^5.4.1",
     "patch-package": "^8.0.0",
