--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     ]
   },
   "dependencies": {
-    "@csstools/normalize.css": "^12.0.0",
+    "@csstools/normalize.css": "^12.1.1",
     "@deck.gl/core": "^8.9.33",
     "@deck.gl/extensions": "^8.9.33",
     "@deck.gl/geo-layers": "^8.9.33",
@@ -79,6 +79,7 @@
     "@deck.gl/mesh-layers": "^8.9.33",
     "@github/mini-throttle": "^2.1.1",
     "@homer0/deferred": "^3.0.5",
+    "@ivliu/react-offscreen": "^1.0.7",
     "@konturio/default-icons": "^2.4.0",
     "@konturio/default-theme": "~3.2.5",
     "@konturio/floating": "^1.1.2",
@@ -125,6 +126,7 @@
     "@types/w3c-generic-sensor": "^1.0.9",
     "@typescript-eslint/eslint-plugin": "^8.4.0",
     "@typescript-eslint/parser": "^8.4.0",
+    "@vitejs/plugin-react-swc": "^3.7.0",
     "@vitest/coverage-v8": "^2.0.5",
     "ajv": "^8.17.1",
     "autoprefixer": "^10.4.20",
@@ -152,11 +154,12 @@
     "hash-wasm": "^4.11.0",
     "history": "^5.3.0",
     "hsluv": "^1.0.1",
-    "i18next": "^23.14.0",
+    "i18next": "^23.15.1",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-conv": "15.0.0",
     "i18next-scanner": "^4.5.0",
     "jwt-decode": "^4.0.0",
+    "keepalive-for-react": "^2.0.12",
     "lint-staged": "^15.2.10",
     "maplibre-gl": "^3.6.2",
     "markdown-to-jsx": "^7.5.0",
@@ -169,7 +172,7 @@
     "patch-package": "^8.0.0",
     "postcss-custom-media": "^8.0.2",
     "postcss-nested": "^6.2.0",
-    "postcss-normalize": "^10.0.1",
+    "postcss-normalize": "^13.0.0",
     "prettier": "^3.3.3",
     "react": "^18.2.0",
     "react-cosmos": "6.2.0",
@@ -180,8 +183,8 @@
     "react-i18next": "^15.0.1",
     "react-lazily": "^0.9.2",
     "react-promise-suspense": "^0.3.4",
-    "react-router": "^6.26.1",
-    "react-router-dom": "^6.26.1",
+    "react-router": "^6.26.2",
+    "react-router-dom": "^6.26.2",
     "react-transition-group": "^4.4.5",
     "react-virtuoso": "^4.10.2",
     "recharts": "^2.12.7",
@@ -195,13 +198,12 @@
     "typescript-plugin-css-modules": "^5.1.0",
     "uhtml": "^4.5.9",
     "utility-types": "^3.11.0",
-    "@vitejs/plugin-react-swc": "^3.7.0",
+    "vi-fetch": "^0.8.0",
     "vite": "5.4.2",
     "vite-plugin-html": "^3.2.2",
     "vite-plugin-mkcert": "^1.17.6",
     "vite-tsconfig-paths": "^5.0.1",
     "vitest": "^2.0.5",
-    "vi-fetch": "^0.8.0",
     "wretch": "^2.9.0"
   },
   "devDependencies": {
