--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "scripts": {
     "dev": "pnpm run i18n:import && vite",
-    "cosmos": "pnpm run i18n:import && run-p auto:cosmos:renderer auto:cosmos auto:open",
-    "cosmos:build": "run-s i18n:import auto:cosmos:export auto:cosmos:renderer:export",
+    "cosmos": "pnpm run i18n:import && cosmos",
+    "cosmos:build": "run-s i18n:import auto:cosmos:export",
     "build": "pnpm run i18n:import && vite build",
     "serve": "vite preview",
     "typecheck": "tsc --noEmit",
@@ -32,11 +32,7 @@
     "docker:build": "docker build -f ./Dockerfile ./ -t ghcr.io/konturio/disaster-ninja-fe:latest",
     "docker:run": "docker run --rm -d -p 80:80/tcp ghcr.io/konturio/disaster-ninja-fe:latest",
     "prepare": "node ./scripts/husky-prepare.js",
-    "auto:open": "open-cli http://localhost:5000",
-    "auto:cosmos": "cosmos --config cosmos.config.json",
-    "auto:cosmos:export": "patch-package && cosmos-export --config cosmos.config.export.json",
-    "auto:cosmos:renderer": "vite --config cosmos.vite.config.ts --force serve --port=8080",
-    "auto:cosmos:renderer:export": "vite build --config cosmos.vite.config.ts",
+    "auto:cosmos:export": "patch-package && cosmos-export --config cosmos.config.json",
     "release": "node ./scripts/auto-release/index.mjs",
     "link:packages": "node ./scripts/auto-link/index.mjs",
     "i18n:export": "tsx ./scripts/i18n/convertion.ts --to-gettext",
@@ -74,7 +70,7 @@
     ]
   },
   "dependencies": {
-    "@csstools/normalize.css": "^12.0.0",
+    "@csstools/normalize.css": "^12.1.1",
     "@deck.gl/core": "^8.9.33",
     "@deck.gl/extensions": "^8.9.33",
     "@deck.gl/geo-layers": "^8.9.33",
@@ -83,6 +79,7 @@
     "@deck.gl/mesh-layers": "^8.9.33",
     "@github/mini-throttle": "^2.1.1",
     "@homer0/deferred": "^3.0.5",
+    "@ivliu/react-offscreen": "^1.0.7",
     "@konturio/default-icons": "^2.4.0",
     "@konturio/default-theme": "~3.2.6",
     "@konturio/floating": "^1.1.2",
@@ -93,7 +90,7 @@
     "@nebula.gl/edit-modes": "1.1.0-alpha.5",
     "@nebula.gl/layers": "1.1.0-alpha.5",
     "@paypal/react-paypal-js": "^8.5.0",
-    "@reatom/async": "^3.15.2",
+    "@reatom/async": "3.15.2",
     "@reatom/core": "^3.9.0",
     "@reatom/core-v2": "^3.1.4",
     "@reatom/hooks": "^3.5.5",
@@ -102,8 +99,8 @@
     "@reatom/react-v2": "^3.1.2",
     "@sentry/react": "^8.18.0",
     "@slack/web-api": "^7.3.1",
-    "@testing-library/dom": "^10.3.2",
-    "@testing-library/react": "^16.0.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.0.1",
     "@turf/area": "6.5.0",
     "@turf/bbox": "^6.5.0",
     "@turf/centroid": "^6.5.0",
@@ -124,13 +121,12 @@
     "@types/react-dom": "^18.2.22",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
-    "@types/react-transition-group": "^4.4.10",
+    "@types/react-transition-group": "^4.4.11",
     "@types/sinon": "^17.0.3",
     "@types/w3c-generic-sensor": "^1.0.9",
-    "@typescript-eslint/eslint-plugin": "^8.0.1",
-    "@typescript-eslint/parser": "^8.0.1",
-    "@uiw/react-github-corners": "1.5.16",
-    "@vitejs/plugin-react": "^4.3.1",
+    "@typescript-eslint/eslint-plugin": "^8.4.0",
+    "@typescript-eslint/parser": "^8.4.0",
+    "@vitejs/plugin-react-swc": "^3.7.0",
     "@vitest/coverage-v8": "^2.0.5",
     "ajv": "^8.17.1",
     "autoprefixer": "^10.4.20",
@@ -140,33 +136,33 @@
     "d3-color": "^3.1.0",
     "d3-interpolate": "^3.0.1",
     "d3-scale": "^4.0.2",
-    "dependency-cruiser": "^15.5.0",
+    "dependency-cruiser": "^16.4.1",
     "dnd-core": "^16.0.1",
     "dot-object": "^2.1.5",
-    "emoji-regex": "^10.3.0",
+    "emoji-regex": "^10.4.0",
     "eslint": "^8.57.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-import-resolver-typescript": "^3.6.3",
     "eslint-plugin-i18n-checker": "^1.4.0",
     "eslint-plugin-i18n-json": "^4.0.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-import": "^2.30.0",
+    "eslint-plugin-react": "^7.35.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "file-saver": "^2.0.5",
     "geojson-polygon-self-intersections": "^1.2.1",
     "gettext-parser": "^8.0.0",
-    "happy-dom": "^14.12.3",
+    "happy-dom": "^15.7.4",
     "hash-wasm": "^4.11.0",
     "history": "^5.3.0",
     "hsluv": "^1.0.1",
-    "i18next": "^22.5.1",
-    "i18next-browser-languagedetector": "^7.2.0",
-    "i18next-conv": "14.0.0",
+    "i18next": "^23.15.1",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-conv": "15.0.0",
     "i18next-scanner": "^4.5.0",
     "jwt-decode": "^4.0.0",
-    "lint-staged": "^15.2.8",
+    "keepalive-for-react": "^2.0.12",
+    "lint-staged": "^15.2.10",
     "maplibre-gl": "^3.6.2",
-    "markdown-to-jsx": "^7.4.7",
-    "mdast": "^3.0.0",
+    "markdown-to-jsx": "^7.5.0",
     "mdast-util-from-markdown": "^2.0.1",
     "minimist": "^1.2.8",
     "nanoid": "^5.0.7",
@@ -177,39 +173,36 @@
     "patch-package": "^8.0.0",
     "postcss-custom-media": "^8.0.2",
     "postcss-nested": "^6.2.0",
-    "postcss-normalize": "^10.0.1",
-    "prettier": "^3.2.5",
+    "postcss-normalize": "^13.0.0",
+    "prettier": "^3.3.3",
     "react": "^18.2.0",
-    "react-component-keepalive-ts": "^1.0.8",
-    "react-cosmos": "5.7.2",
+    "react-cosmos": "6.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-gtm-module": "^2.0.11",
-    "react-i18next": "^12.3.1",
+    "react-i18next": "^15.0.1",
     "react-lazily": "^0.9.2",
-    "react-markdown": "^8.0.7",
     "react-promise-suspense": "^0.3.4",
-    "react-router": "^6.25.1",
-    "react-router-dom": "^6.25.1",
+    "react-router": "^6.26.2",
+    "react-router-dom": "^6.26.2",
     "react-transition-group": "^4.4.5",
-    "react-virtuoso": "^4.9.0",
+    "react-virtuoso": "^4.10.2",
     "recharts": "^2.12.7",
     "rollup-plugin-visualizer": "^5.12.0",
-    "sinon": "^18.0.0",
-    "stylelint": "^16.2.1",
+    "sinon": "^18.0.1",
+    "stylelint": "^16.9.0",
     "stylelint-config-recommended": "^14.0.1",
-    "surge": "^0.23.1",
     "ts-json-schema-generator": "^2.3.0",
-    "tsx": "^4.17.0",
-    "typescript": "5.5.3",
+    "tsx": "^4.19.0",
+    "typescript": "5.5.4",
     "typescript-plugin-css-modules": "^5.1.0",
     "uhtml": "^4.5.9",
     "utility-types": "^3.11.0",
     "vi-fetch": "^0.8.0",
-    "vite": "~5.4.0",
+    "vite": "5.4.2",
     "vite-plugin-html": "^3.2.2",
-    "vite-plugin-mkcert": "^1.17.5",
+    "vite-plugin-mkcert": "^1.17.6",
     "vite-tsconfig-paths": "^5.0.1",
     "vitest": "^2.0.5",
     "wretch": "^2.9.0"
@@ -224,11 +217,10 @@
     "open-cli": "^7.2.0",
     "playwright-slack-report": "^1.1.81",
     "prompts": "^2.4.2",
+    "react-cosmos-plugin-vite": "^6.2.0",
     "semver": "^7.6.3"
   },
-  "pnpm": {
-    "patchedDependencies": {
-      "react-component-keepalive-ts@1.0.8": "patches/react-component-keepalive-ts@1.0.8.patch"
-    }
+  "optionalDependencies": {
+    "surge": "^0.23.1"
   }
 }
