--- a/package.json
+++ b/package.json
@@ -95,7 +95,8 @@
     "@reatom/core-v2": "^3.1.4",
     "@reatom/hooks": "^3.5.5",
     "@reatom/logger": "^3.8.4",
-    "@reatom/npm-react": "^3.8.10",
+    "@reatom/npm-react": "^3.9.0",
+    "@reatom/primitives": "^3.7.3",
     "@reatom/react-v2": "^3.1.2",
     "@sentry/react": "^8.18.0",
     "@slack/web-api": "^7.3.1",
