--- a/package.json
+++ b/package.json
@@ -211,6 +211,7 @@
     "@faker-js/faker": "^8.4.1",
     "@playwright/test": "^1.42.1",
     "@types/gettext-parser": "^4.0.4",
+    "@types/react-gtm-module": "^2.0.3",
     "chalk": "^5.3.0",
     "dotenv": "^16.4.5",
     "husky": "^8.0.3",
