husky 9 migration, deps updates

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,7 @@ on:
 env:
   NODE_ENV: production
   AVA_FORCE_CI: 'not-ci'
+  HUSKY: 0
   REGISTRY: ghcr.io
   IMAGE_REPO: ${{ github.repository }}
 
