--- a/package.json
+++ b/package.json
@@ -26,13 +26,11 @@
     "lint:css": "stylelint ./src/**/*.css",
     "lint:i18n:keys:identity": "eslint --ext .json  -c .eslintrc.identical.keys.cjs src/core/localization/translations/",
     "depcruise": "depcruise --config .dependency-cruiser.cjs src",
-    "postinstall": "run-s fixtypes patch i18n:import",
-    "fixtypes": "node ./scripts/fix-deckgl-types.mjs",
-    "patch": "patch-package",
+    "postinstall": "run-s i18n:import",
     "docker:build": "docker build -f ./Dockerfile ./ -t ghcr.io/konturio/disaster-ninja-fe:latest",
     "docker:run": "docker run --rm -d -p 80:80/tcp ghcr.io/konturio/disaster-ninja-fe:latest",
-    "prepare": "node ./scripts/husky-prepare.js",
-    "auto:cosmos:export": "patch-package && cosmos-export --config cosmos.config.json",
+    "prepare": "husky",
+    "auto:cosmos:export": "cosmos-export --config cosmos.config.json",
     "release": "node ./scripts/auto-release/index.mjs",
     "link:packages": "node ./scripts/auto-link/index.mjs",
     "i18n:export": "tsx ./scripts/i18n/convertion.ts --to-gettext",
@@ -71,36 +69,22 @@
   },
   "dependencies": {
     "@csstools/normalize.css": "^12.1.1",
-    "@deck.gl/core": "^8.9.33",
-    "@deck.gl/extensions": "^8.9.33",
-    "@deck.gl/geo-layers": "^8.9.33",
     "@deck.gl/layers": "^8.9.33",
     "@deck.gl/mapbox": "^8.9.33",
-    "@deck.gl/mesh-layers": "^8.9.33",
     "@github/mini-throttle": "^2.1.1",
-    "@homer0/deferred": "^3.0.5",
-    "@ivliu/react-offscreen": "^1.0.7",
     "@konturio/default-icons": "^2.4.0",
     "@konturio/default-theme": "~3.2.6",
     "@konturio/floating": "^1.1.2",
     "@konturio/ui-kit": "^5.3.5",
-    "@loaders.gl/core": "^3.4.14",
-    "@loaders.gl/loader-utils": "^3.4.14",
-    "@loaders.gl/worker-utils": "^3.4.14",
     "@nebula.gl/edit-modes": "1.1.0-alpha.5",
     "@nebula.gl/layers": "1.1.0-alpha.5",
-    "@paypal/react-paypal-js": "^8.5.0",
-    "@reatom/async": "3.15.2",
+    "@paypal/react-paypal-js": "^8.7.0",
     "@reatom/core": "^3.9.0",
     "@reatom/core-v2": "^3.1.4",
-    "@reatom/hooks": "^3.5.5",
-    "@reatom/logger": "^3.8.4",
-    "@reatom/npm-react": "^3.8.10",
+    "@reatom/framework": "^3.4.53",
+    "@reatom/npm-react": "^3.10.0",
     "@reatom/react-v2": "^3.1.2",
-    "@sentry/react": "^8.18.0",
-    "@slack/web-api": "^7.3.1",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/react": "^16.0.1",
+    "@sentry/react": "^8.35.0",
     "@turf/area": "6.5.0",
     "@turf/bbox": "^6.5.0",
     "@turf/centroid": "^6.5.0",
@@ -116,112 +100,117 @@
     "@types/file-saver": "^2.0.7",
     "@types/geojson": "^7946.0.14",
     "@types/node": "^20.14.11",
-    "@types/papaparse": "^5.3.14",
+    "@types/papaparse": "^5.3.15",
     "@types/react": "^18.2.65",
     "@types/react-dom": "^18.2.22",
+    "@types/react-gtm-module": "^2.0.4",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-transition-group": "^4.4.11",
     "@types/sinon": "^17.0.3",
-    "@types/w3c-generic-sensor": "^1.0.9",
-    "@typescript-eslint/eslint-plugin": "^8.4.0",
-    "@typescript-eslint/parser": "^8.4.0",
-    "@vitejs/plugin-react-swc": "^3.7.0",
-    "@vitest/coverage-v8": "^2.0.5",
-    "ajv": "^8.17.1",
-    "autoprefixer": "^10.4.20",
-    "bundle-size-diff": "github:konturio/bundle-size-diff#v1.0.7",
+    "@types/w3c-generic-sensor": "^1.0.10",
     "clsx": "^1.2.1",
-    "cpr": "^3.0.1",
     "d3-color": "^3.1.0",
     "d3-interpolate": "^3.0.1",
     "d3-scale": "^4.0.2",
-    "dependency-cruiser": "^16.4.1",
     "dnd-core": "^16.0.1",
     "dot-object": "^2.1.5",
     "emoji-regex": "^10.4.0",
-    "eslint": "^8.57.0",
-    "eslint-import-resolver-typescript": "^3.6.3",
-    "eslint-plugin-i18n-checker": "^1.4.0",
-    "eslint-plugin-i18n-json": "^4.0.0",
-    "eslint-plugin-import": "^2.30.0",
-    "eslint-plugin-react": "^7.35.2",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "file-saver": "^2.0.5",
     "geojson-polygon-self-intersections": "^1.2.1",
     "gettext-parser": "^8.0.0",
-    "happy-dom": "^15.7.4",
     "hash-wasm": "^4.11.0",
     "history": "^5.3.0",
     "hsluv": "^1.0.1",
-    "i18next": "^23.15.1",
+    "i18next": "^23.16.3",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-conv": "15.0.0",
-    "i18next-scanner": "^4.5.0",
     "jwt-decode": "^4.0.0",
-    "keepalive-for-react": "^2.0.12",
-    "lint-staged": "^15.2.10",
+    "keepalive-for-react": "^3.0.1",
     "maplibre-gl": "^3.6.2",
     "markdown-to-jsx": "^7.5.0",
     "mdast-util-from-markdown": "^2.0.1",
-    "minimist": "^1.2.8",
     "nanoid": "^5.0.7",
     "nanoid-dictionary": "^4.3.0",
     "nextafter": "^1.0.0",
-    "npm-run-all": "^4.1.5",
     "papaparse": "^5.4.1",
-    "patch-package": "^8.0.0",
-    "postcss-custom-media": "^8.0.2",
-    "postcss-nested": "^6.2.0",
-    "postcss-normalize": "^13.0.0",
-    "prettier": "^3.3.3",
     "react": "^18.2.0",
-    "react-cosmos": "6.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-gtm-module": "^2.0.11",
-    "react-i18next": "^15.0.1",
+    "react-i18next": "^15.1.0",
     "react-lazily": "^0.9.2",
     "react-promise-suspense": "^0.3.4",
-    "react-router": "^6.26.2",
-    "react-router-dom": "^6.26.2",
+    "react-router": "^6.27.0",
+    "react-router-dom": "^6.27.0",
     "react-transition-group": "^4.4.5",
-    "react-virtuoso": "^4.10.2",
-    "recharts": "^2.12.7",
-    "rollup-plugin-visualizer": "^5.12.0",
-    "sinon": "^18.0.1",
-    "stylelint": "^16.9.0",
-    "stylelint-config-recommended": "^14.0.1",
-    "ts-json-schema-generator": "^2.3.0",
-    "tsx": "^4.19.0",
-    "typescript": "5.5.4",
-    "typescript-plugin-css-modules": "^5.1.0",
-    "uhtml": "^4.5.9",
+    "react-virtuoso": "^4.12.0",
+    "recharts": "^2.13.0",
+    "uhtml": "^4.5.11",
     "utility-types": "^3.11.0",
     "vi-fetch": "^0.8.0",
-    "vite": "5.4.2",
-    "vite-plugin-html": "^3.2.2",
-    "vite-plugin-mkcert": "^1.17.6",
-    "vite-tsconfig-paths": "^5.0.1",
-    "vitest": "^2.0.5",
-    "wretch": "^2.9.0"
+    "wretch": "^2.10.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
-    "@playwright/test": "^1.42.1",
+    "@playwright/test": "^1.48.1",
+    "@slack/web-api": "^7.7.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.0.1",
     "@types/gettext-parser": "^4.0.4",
-    "@types/react-gtm-module": "^2.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.11.0",
+    "@typescript-eslint/parser": "^8.11.0",
+    "@vitejs/plugin-react-swc": "^3.7.1",
+    "@vitest/coverage-v8": "^2.1.3",
+    "ajv": "^8.17.1",
+    "autoprefixer": "^10.4.20",
+    "bundle-size-diff": "github:konturio/bundle-size-diff#v1.0.7",
     "chalk": "^5.3.0",
+    "dependency-cruiser": "^16.5.0",
     "dotenv": "^16.4.5",
-    "husky": "^8.0.3",
-    "open-cli": "^7.2.0",
-    "playwright-slack-report": "^1.1.81",
+    "eslint": "^8.57.0",
+    "eslint-import-resolver-typescript": "^3.6.3",
+    "eslint-plugin-i18n-checker": "^1.4.0",
+    "eslint-plugin-i18n-json": "^4.0.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "happy-dom": "^15.7.4",
+    "husky": "^9.1.6",
+    "i18next-scanner": "^4.6.0",
+    "lint-staged": "^15.2.10",
+    "minimist": "^1.2.8",
+    "npm-run-all": "^4.1.5",
+    "open-cli": "^8.0.0",
+    "playwright-slack-report": "^1.1.88",
+    "postcss-custom-media": "^8.0.2",
+    "postcss-nested": "^6.2.0",
+    "postcss-normalize": "^13.0.1",
+    "prettier": "^3.3.3",
     "prompts": "^2.4.2",
+    "react-cosmos": "6.2.0",
     "react-cosmos-plugin-vite": "^6.2.0",
-    "semver": "^7.6.3"
+    "rollup-plugin-visualizer": "^5.12.0",
+    "semver": "^7.6.3",
+    "sinon": "^19.0.2",
+    "stylelint": "^16.10.0",
+    "stylelint-config-recommended": "^14.0.1",
+    "ts-json-schema-generator": "^2.3.0",
+    "tsx": "^4.19.1",
+    "typescript": "^5.6.3",
+    "typescript-plugin-css-modules": "^5.1.0",
+    "vite": "5.4.10",
+    "vite-plugin-html": "^3.2.2",
+    "vite-plugin-mkcert": "^1.17.6",
+    "vite-tsconfig-paths": "^5.0.1",
+    "vitest": "^2.1.3"
   },
-  "optionalDependencies": {
-    "surge": "^0.23.1"
+  "pnpm": {
+    "patchedDependencies": {
+      "@reatom/core-v2@3.1.4": "patches/@reatom__core-v2@3.1.4.patch"
+    },
+    "overrides": {
+      "@reatom/utils": "^3.11.0"
+    }
   }
 }
