--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,7 +61,7 @@ jobs:
           else
             echo "Translations are synced."
           fi
-      - run: pnpm i
+      - run: pnpm i --prod=false
       - run: pnpm run postinstall
       - run: pnpm run lint
       - run: pnpm run typecheck
@@ -89,7 +89,7 @@ jobs:
           key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
-      - run: pnpm i
+      - run: pnpm i --prod=false
       - run: pnpm run build
       - name: Display structure of builded files
         run: ls -R
