--- a/.github/workflows/deploy_cosmos.yml
+++ b/.github/workflows/deploy_cosmos.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Run cosmos:build to build static
         run: |
-          pnpm ci --also=dev
+          pnpm i --prod=false --frozen-lockfile
           pnpm run cosmos:build
 
       - name: Deploy 🚀
