--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,11 +4,7 @@
     "noImplicitAny": false,
     "useDefineForClassFields": true,
     "target": "esnext",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "es2022"
-    ],
+    "lib": ["dom", "dom.iterable", "es2022"],
     "downlevelIteration": true,
     "allowJs": true,
     "skipLibCheck": true,
@@ -32,30 +28,14 @@
     ],
     "baseUrl": "./src",
     "paths": {
-      "~components/*": [
-        "components/*"
-      ],
-      "~views/*": [
-        "views/*"
-      ],
-      "~config/*": [
-        "config/*"
-      ],
-      "~utils/*": [
-        "utils/*"
-      ],
-      "~services/*": [
-        "services/*"
-      ],
-      "~core/*": [
-        "core/*"
-      ],
-      "~features/*": [
-        "features/*"
-      ],
-      "~widgets/*": [
-        "widgets/*"
-      ]
+      "~components/*": ["components/*"],
+      "~views/*": ["views/*"],
+      "~config/*": ["config/*"],
+      "~utils/*": ["utils/*"],
+      "~services/*": ["services/*"],
+      "~core/*": ["core/*"],
+      "~features/*": ["features/*"],
+      "~widgets/*": ["widgets/*"]
     }
   },
   "include": [
@@ -72,10 +52,6 @@
     "./cosmos/*.*",
     "./cosmos-export/*.*"
   ],
-  "types": [
-    "@types/react"
-  ],
-  "typeRoots": [
-    "./node_modules/@types"
-  ]
+  "types": ["@types/react"],
+  "typeRoots": ["./node_modules/@types"]
 }
